class_name ActComponent
extends Node


@onready var act1_scenes = [
	"res://Scenes/Act1/a1level_1.tscn",
	"res://Scenes/Act1/a1level_2.tscn",
	"res://Scenes/Act1/a1level_3.tscn",
	"res://Scenes/Act1/a1level_4.tscn",
	"res://Scenes/Act1/a1level_5.tscn",
	"res://Scenes/Act1/a1level_6.tscn",
]

@onready var act2_scenes = [
	"res://Scenes/Act2/a1level_1.tscn",
	"res://Scenes/Act2/a2level_2.tscn",
	"res://Scenes/Act2/a2level_3.tscn",
	"res://Scenes/Act2/a2level_4.tscn",
	"res://Scenes/Act2/a2level_5.tscn",
	"res://Scenes/Act2/a2level_6.tscn",
	"res://Scenes/Act2/a2level_7.tscn",
	"res://Scenes/Act2/a2level_8.tscn",
	"res://Scenes/Act2/a2level_9.tscn"
]


@onready var act3_scenes = [
	"res://Scenes/Act3/a3level_1.tscn",
	"res://Scenes/Act3/a3level_2.tscn",
	"res://Scenes/Act3/a3level_3.tscn",
	"res://Scenes/Act3/a3level_4.tscn",
	"res://Scenes/Act3/a3level_5.tscn",
	"res://Scenes/Act3/a3level_6.tscn",
	"res://Scenes/Act3/a3level_7.tscn",
	"res://Scenes/Act3/a3level_8.tscn",	
]
